--- a/css/demo.css
+++ b/css/demo.css
@@ -1,4 +1,5 @@
 /* General Blueprint Style */
+@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap');
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
 @font-face {
 	font-family: 'bpicons';
@@ -19,7 +20,7 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 .clearfix:after { clear: both; }
 
 body {
-    font-family: 'Lato', Calibri, Arial, sans-serif;
+    
     color: #fff;
     background-image:url(../images/srv.jpg);
 		background-repeat: no-repeat;
@@ -27,14 +28,8 @@ body {
 		background-position:center;
 }
 
-a {
-	color: #f0f0f0;
-	text-decoration: none;
-}
+.cbp-so-section h2{ font-family: 'Fugaz One';}
 
-a:hover {
-	color: #000;
-}
 
 .container > header {
 	width: 90%;
